--- a/Atividades/atividade-pratica-01/home.html
+++ b/Atividades/atividade-pratica-01/home.html
@@ -7,30 +7,23 @@
 
 <body>
     <header>
+        <div>        
+            <a href="#">Página Inicial</a>
+            <a href="perfil.html">Perfil</a>            
+            <a href="estados.html">Estados</a>
+            <a href="cidades.html">Cidades</a>
+            <a href="produtos.html">Produtos</a>           
+            <a href="relatorio.html">Relatório</a>
+            <a href="cadastro.html">Cadastrar Usuário</a>
+            <a href="cadastrarproduto.html">Cadastrar Produto</a>
+            <a href="home.html">Sair</a>          
+        </div>
+
         <h2>Página Inicial</h2>
     </header>
 
     <div>
-        <h2>Curso se programação WEB</h2>
-        <h3>Início do curso em HTML</h3>
-        <h4></h4>
-
-        <!--comentários-->
-        <p>Curso de introdução a programação web</p>
-    </div>
-
-    <div>
-        <div>
-            <a href="home.html">Página Inicial</a>
-            <a href="pessoas.html">Pessoas</a>
-            <a href="estados.html">Estados</a>
-            <a href="cidades.html">Cidades</a>
-            <a href="produtos.html">Produtos</a>
-            <a href="perfil.html">Perfil</a>
-            <a href="cadastro.html">Cadastrar</a>
-            <a href="home.html">Sair</a>
-        </div>
-        <img width="100%" src="./img/patrick-tomasso-VCQC_FcxK9k-unsplash.jpg" alt=""/>
+        <img width="50%" src="./img/patrick-tomasso-VCQC_FcxK9k-unsplash.jpg" alt=""/>
     </div>
 
 </body>
