--- a/Atividades/atividade-pratica-01/perfil.html
+++ b/Atividades/atividade-pratica-01/perfil.html
@@ -6,28 +6,22 @@
 
 <body>
     <header>
+        <div>  
+            <a href="home.html">Página Inicial</a>
+            <a href="#">Perfil</a>           
+            <a href="estados.html">Estados</a>
+            <a href="cidades.html">Cidades</a>
+            <a href="produtos.html">Produtos</a>           
+            <a href="relatorio.html">Relatório</a>
+            <a href="cadastro.html">Cadastrar Usuário</a>
+            <a href="cadastrarproduto.html">Cadastrar Produto</a>
+            <a href="home.html">Sair</a>   
+        </div>
+
         <h2>Perfil</h2>
     </header>
 
     <div>
-        <h3>Início do curso em HTML</h3>
-        <!--comentários-->
-        <p>Curso de introdução a programação web</p>
-    </div>
-
-    <div>
-        <div>  
-            <a href="home.html">Página Inicial</a>
-            <a href="pessoas.html">Pessoas</a>
-            <a href="estados.html">Estados</a>
-            <a href="cidades.html">Cidades</a>
-            <a href="produtos.html">Produtos</a>
-            <a href="perfil.html">Perfil</a>
-            <a href="cadastro.html">Cadastrar</a>
-            <a href="home.html">Sair</a>
-           
-        </div>
-        <br/>
 
         <label>Foto:</label>
         <br/>
