Atualização Atividade css

--- a/Atividades/exercicios/exercicio-2/perfil.html
+++ b/Atividades/exercicios/exercicio-2/perfil.html
@@ -10,13 +10,14 @@
 
 <body>
     <header>
+        <nav>
             <a href="home.html">Página Inicial</a>
             <a class="atual" href="#">Perfil</a>           
             <a href="produtos.html">Produtos</a>           
             <a href="relatorio.html">Relatório</a>
-            <a href="cadastrarUsuario.html">Cadastrar Usuário</a>
-            <a href="cadastrarproduto.html">Cadastrar Produto</a>
-            <a href="home.html">Sair</a>   
+            <a href="cadastro.html">Cadastro</a>
+            <a href="home.html">Sair</a>
+        </nav>
     </header>
 
     <main>
