--- a/Atividades/exercicios/exercicio-2/cadastrarUsuario.html
+++ b/Atividades/exercicios/exercicio-2/cadastrarUsuario.html
@@ -9,16 +9,19 @@
 
 <body>
     <header>
+        <nav>
             <a href="home.html">Página Inicial</a>
             <a href="perfil.html">Perfil</a>
             <a href="produtos.html">Produtos</a>           
             <a href="relatorio.html">Relatório</a>
-            <a class="atual" href="#">Cadastrar Usuário</a>
-            <a href="cadastrarproduto.html">Cadastrar Produto</a>
+            <a class="atual" href="cadastro.html">Cadastro</a>
             <a href="home.html">Sair</a>
+        </nav>
     </header>
 
-    <main>       
+    <main>
+        <a href="cadastro.html">Voltar</a>
+               
         <form method="post" action="validar.html">
             <div>
                 <label for="nome">Nome</label>
