--- a/Atividades/exercicios/exercicio-2/cadastrarproduto.html
+++ b/Atividades/exercicios/exercicio-2/cadastrarproduto.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global.css">
-    <title>Document</title>
+    <title>Cadastrar Produto</title>
 </head>
 <body>
     <header>
+        <nav>
             <a href="home.html">Página Inicial</a>
             <a href="perfil.html">Perfil</a>
             <a href="produtos.html">Produtos</a>           
             <a href="relatorio.html">Relatório</a>
-            <a href="cadastrarUsuario.html">Cadastrar Usuário</a>
-            <a class="atual" href="#">Cadastrar Produto</a>
+            <a class="atual" href="cadastro.html">Cadastro</a>
             <a href="home.html">Sair</a>
+        </nav>
     </header>
 
         <main>
+            <a href="cadastro.html">Voltar</a>
+            
             <h2>Dados do cadastro</h2>
 
             <form method="post" action="validar.html">
