--- a/Atividades/exercicios/exercicio-2/home.html
+++ b/Atividades/exercicios/exercicio-2/home.html
@@ -4,23 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/home.css">
     <title>Introdução ao HTML</title>
 </head>
 
 <body>
-    <header>       
+    <header>
+        <nav> 
             <a class="atual" href="#">Página Inicial</a>
             <a href="perfil.html">Perfil</a>            
-            <a href="produtos.html">Produtos</a>           
+            <a href="produtos.html">Produtos</a>
+            <h1>WEB</h1>           
             <a href="relatorio.html">Relatório</a>
-            <a href="cadastrarUsuario.html">Cadastrar Usuário</a>
-            <a href="cadastrarproduto.html">Cadastrar Produto</a>
+            <a href="cadastro.html">Cadastro</a>
             <a href="home.html">Sair</a>
+        </nav>   
+
+        <img class="banner" width="50%" src="./img/mohammed-nasim-mYBW4f27CU8-unsplash.jpg" alt=""/>
     </header>
 
-    <div>
-        <img class="banner" width="50%" src="./img/nhu-nguyen-IL1qSqEMNBo-unsplash.jpg" alt=""/>
-    </div>
-
+    <main>
+        <h1>Bem Vindo</h1>
+    </main>
 </body>
 </html>
