--- a/Atividades/exercicios/exercicio-2/relatorio.html
+++ b/Atividades/exercicios/exercicio-2/relatorio.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
+        <nav>
             <a href="home.html">Página Inicial</a>
             <a href="perfil.html">Perfil</a>            
             <a href="produtos.html">Produtos</a>           
             <a class="atual" href="#">Relatório</a>
-            <a href="cadastrarUsuario.html">Cadastrar Usuário</a>
-            <a href="cadastrarproduto.html">Cadastrar Produto</a>
+            <a href="cadastro.html">Cadastro</a>
             <a href="home.html">Sair</a>
+        </nav>
     </header>
 
     <div>
