--- a/Atividades/exercicios/exercicio-2/cadastrarUsuario.html
+++ b/Atividades/exercicios/exercicio-2/cadastrarUsuario.html
@@ -20,7 +20,9 @@
     </header>
 
     <main>
-        <a href="cadastro.html">Voltar</a>
+        <a class="voltar" href="cadastro.html">Voltar</a>
+
+        <h2>Cadastro</h2>
                
         <form method="post" action="validar.html">
             <div>
@@ -57,17 +59,17 @@
             
             <div>
                 <input type="radio" name="area" id="frontend"/>
-                <label for="frontend">Front-end</label>
+                <label class="widthauto" for="frontend">Front-end</label>
             </div>
 
             <div>
                 <input type="radio" name="area" id="backend"/>
-                <label for="backend">Back-end</label>
+                <label class="widthauto" for="backend">Back-end</label>
             </div>
 
             <div>
                 <input type="radio" name="area" id="fulls"/>
-                <label for="fulls">Fullstack</label>
+                <label class="widthauto" for="fulls">Fullstack</label>
             </div>
 
             <div>
