--- a/Atividades/exercicios/exercicio-2/cadastrarproduto.html
+++ b/Atividades/exercicios/exercicio-2/cadastrarproduto.html
@@ -19,7 +19,7 @@
     </header>
 
         <main>
-            <a href="cadastro.html">Voltar</a>
+            <a class="voltar" href="cadastro.html">Voltar</a>
             
             <h2>Dados do cadastro</h2>
 
