--- a/Atividades/exercicios/exercicio-2/produtos.html
+++ b/Atividades/exercicios/exercicio-2/produtos.html
@@ -18,11 +18,11 @@
         </nav>
     </header>
 
-    <div>
+    <main>
         <h2>Lista de Produtos Cadastrados</h2>
 
-        <table border="1">
-            <caption>Sistemas Web</caption>
+        <table cellspacing="0" rules="none">
+            <!-- <caption>Sistemas Web</caption> -->
 
             <thead>
                 <tr>
@@ -110,13 +110,14 @@
 
             <tfoot>
                 <tr>
-                    <td colspan="2">Quantidade</td>
-                    <td>3</td>
-                    <td colspan="4">Produtos</td>
+                    <td>Quantidade</td>
+                    <td colspan="2"></td>
+                    <td>19</td>
+                    <td colspan="4"></td>
                 </tr>
             </tfoot>
         </table>
-    </div>
+    </main>
 
 </body>
 </html>
