--- a/Atividades/exercicios/exercicio-2/relatorio.html
+++ b/Atividades/exercicios/exercicio-2/relatorio.html
@@ -18,11 +18,10 @@
         </nav>
     </header>
 
-    <div>
+    <main>
         <h2>Lista de Pessoas Cadastradas</h2>
 
-        <table border="1">
-            <caption>Sistemas Web</caption>
+        <table cellspacing="0" rules="none">
 
             <thead>
                 <tr>
@@ -80,13 +79,13 @@
 
             <tfoot>
                 <tr>
-                    <td colspan="2">Quantidade</td>
+                    <td>Quantidade</td>
                     <td>4</td>
-                    <td colspan="4">Pessoas</td>
+                    <td colspan="6"></td>
                 </tr>
             </tfoot>
         </table>
-    </div>
+    </main>
 
 </body>
 </html>
